Fixed bug Big gap before table on Chrome. Issue #50.

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -795,3 +795,7 @@ h3.category-item:hover {
 	top: -7px;
 	left: 4px;
 }
+
+.floatleft {
+	float: left;
+}
